# nukedns

./: Cargo.toml  denylist.txt  nukedns.service  nukedns.toml
.github/workflows/: rust.yml
src/: main.rs  resolve.rs
src/dns/: mod.rs
