[package]
name = "nukedns"
version = "0.1.0"
authors = ["Tom <mr@tomclement.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trust-dns-proto = { version = "0.21", default-features = false }
trust-dns-client = "0.20"
trust-dns-server = "0.20"
tokio = { version = "1.17", features = ["full"] }
local-ip-address = "0.4"
log = "0.4"
log4rs = "1.0"
dotenv = "0.15"
lazy_static = "1.4"
toml = "0.5"
futures = "0.3.21"

[dependencies.serde]
version = "1.0"
features = ["derive"]
