[package]
name = "nukedns"
version = "0.1.0"
authors = ["Victor Koenders <github@trangar.com", "Tom <mr@tomclement.nl>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trust-dns-proto = { version = "0.22", default-features = false }
trust-dns-client = "0.22"
trust-dns-server = "0.22"
tokio = { version = "1.26", features = ["full"] }
local-ip-address = "0.5"
log = "0.4"
log4rs = "1.2"
dotenv = "0.15"
lazy_static = "1.4"
toml = "0.7"
futures = "0.3.27"

[dependencies.serde]
version = "1.0"
features = ["derive"]
